.provarCaches/00D410000011HE0EAM/objects/rstk__pebomdisoutput__c.object
<CustomObject>
    <description>pebomdisoutput__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pebomdisoutput_item__r.rstk__externalid__c + &apos;_&apos; + rstk__pebomdisoutput_compitem__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__pebomdisoutput_item__r.rstk__peitem_item__c, 39) + &apos;(&apos; + LEFT(rstk__pebomdisoutput_compitem__r.rstk__peitem_item__c, 39) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__pebomdisoutput_item__r.rstk__peitem_item__c + &apos; &apos; + rstk__pebomdisoutput_compitem__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pebomdisoutput_calccostpct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Allocation Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__pebomdisoutput_compitem__c</fullName>
        <label>Component Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Engineering Item Derived Components (Component Item)</relationshipLabel>
        <relationshipName>pebomdisoutput_comps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pebomdisoutput_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Engineering Item Derived Components</relationshipLabel>
        <relationshipName>pebomdisoutput_parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pebomdisoutput_majorbyproductind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Byproduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pebomdisoutput_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Engineering Item Derived Component</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__PEBOMDISOUTPUT</fullName>
        <columns>NAME</columns>
        <columns>rstk__pebomdisoutput_item__c</columns>
        <columns>rstk__pebomdisoutput_compitem__c</columns>
        <columns>rstk__pebomdisoutput_qtyper__c</columns>
        <columns>rstk__pebomdisoutput_calccostpct__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PEBOMDISOUTPUT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineering Item Derived Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Cost_Allocation_Pct</fullName>
        <active>true</active>
        <description>Cost Allocation Pct is required</description>
        <errorConditionFormula>rstk__pebomdisoutput_calccostpct__c = null</errorConditionFormula>
        <errorMessage>Cost Allocation Pct is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Item_Not_FIFO</fullName>
        <active>true</active>
        <description>Items using FIFO Costing cannot be used as Disassembly Derived Components</description>
        <errorConditionFormula>rstk__pebomdisoutput_compitem__r.rstk__peitem_fifoind__c = true</errorConditionFormula>
        <errorMessage>Items using FIFO Costing cannot be used as Disassembly Derived Components</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Parent_Item</fullName>
        <active>true</active>
        <description>Parent Item is required</description>
        <errorConditionFormula>rstk__pebomdisoutput_item__c = null</errorConditionFormula>
        <errorMessage>Parent Item is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Quantity_Per</fullName>
        <active>true</active>
        <description>Quantity Per is required</description>
        <errorConditionFormula>rstk__pebomdisoutput_qtyper__c == null</errorConditionFormula>
        <errorMessage>Quantity Per is required</errorMessage>
    </validationRules>
</CustomObject>